# simple-nn

./: .gitignore  README.md  compare_implementations.py  func.py  mnist_test.py  nn_fp.py  nn_oop.py  pyproject.toml  run_experiments.py
