[project]
name = "simple-nn"
version = "0.1.0"
description = "Simple Neural Network Implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "memory-profiler>=0.61.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
